# black_hole

./: CMakeLists.txt
src/: galaxy.cpp  main.cpp  worm_hole.cpp
